@@ -1,0 +1,7 @@
+@PACKAGE_INIT@
+
+if(NOT TARGET zen)
+  include(${CMAKE_CURRENT_LIST_DIR}/ZenLibTargets.cmake)
+endif()
+
+set(ZenLib_LIBRARY zen)
